2012-12-24  Alexei Filippov  <alph@chromium.org>

        Web Inspector: add async API for passing renderer process memory stats
        https://bugs.webkit.org/show_bug.cgi?id=105278

        Reviewed by Yury Semikhatsky.

        On some platforms (e.g. Linux) it may take some time to collect
        total process memory information as it involves an IPC out of a
        sandboxed renderer process. So add an async way to collect the statistics.

        * chromium/public/Platform.h:
        (Platform):
        (ProcessMemorySizesCallback):
        (WebKit::Platform::ProcessMemorySizesCallback::~ProcessMemorySizesCallback):
        (WebKit::Platform::requestProcessMemorySizes):

2012-12-18  Dana Jansens  <danakj@chromium.org>

        [chromium] Make WebLayerTreeView::loseCompositorContext non-pure virtual
        https://bugs.webkit.org/show_bug.cgi?id=105328

        Reviewed by James Robinson.

        This allows us to decouple the chromium and webkit sides and remove this
        function entirely on each side.

        * chromium/public/WebLayerTreeView.h:
        (WebKit::WebLayerTreeView::loseCompositorContext):

2012-12-18  James Robinson  <jamesr@chromium.org>

        [chromium] Fix include style in WebTransformOperations.h
        https://bugs.webkit.org/show_bug.cgi?id=105259

        Reviewed by Adrienne Walker.

        Changes include of WebTransformationMatrix.h from '#include <public/..h>' to '#include "....h". The latter
        always works, since #include "foo.h" always finds foo.h in the same directory, and doesn't require all
        downstream users of this header to have Source/Platform/chromium/ on the include path.

        * chromium/public/WebTransformOperations.h:

2012-12-17  Dana Jansens  <danakj@chromium.org>

        [chromium] Add the GL_CHROMIUM_lose_context to WebGraphicsContext3D
        https://bugs.webkit.org/show_bug.cgi?id=105238

        Reviewed by James Robinson.

        * chromium/public/WebGraphicsContext3D.h: