@@ -46,6 +46,45 @@ struct WebLocalizedString {
         AXLinkActionVerb,
         AXLinkText,
         AXListMarkerText,
+        AXMediaAudioElement,
+        AXMediaAudioElementHelp,
+        AXMediaCurrentTimeDisplay,
+        AXMediaCurrentTimeDisplayHelp,
+        AXMediaDefault,
+        AXMediaEnterFullscreenButton,
+        AXMediaEnterFullscreenButtonHelp,
+        AXMediaExitFullscreenButton,
+        AXMediaExitFullscreenButtonHelp,
+        AXMediaHideClosedCaptionsButton,
+        AXMediaHideClosedCaptionsButtonHelp,
+        AXMediaMuteButton,
+        AXMediaMuteButtonHelp,
+        AXMediaPauseButton,
+        AXMediaPauseButtonHelp,
+        AXMediaPlayButton,
+        AXMediaPlayButtonHelp,
+        AXMediaReturnToRealTime,
+        AXMediaReturnToRealTimeHelp,
+        AXMediaRewindButton,
+        AXMediaRewindButtonHelp,
+        AXMediaSeekBackButton,
+        AXMediaSeekBackButtonHelp,
+        AXMediaSeekForwardButton,
+        AXMediaSeekForwardButtonHelp,
+        AXMediaShowClosedCaptionsButton,
+        AXMediaShowClosedCaptionsButtonHelp,
+        AXMediaSlider,
+        AXMediaSliderHelp,
+        AXMediaSliderThumb,
+        AXMediaSliderThumbHelp,
+        AXMediaStatusDisplay,
+        AXMediaStatusDisplayHelp,
+        AXMediaTimeRemainingDisplay,
+        AXMediaTimeRemainingDisplayHelp,
+        AXMediaUnMuteButton,
+        AXMediaUnMuteButtonHelp,
+        AXMediaVideoElement,
+        AXMediaVideoElementHelp,
         AXMillisecondFieldText,
         AXMinuteFieldText,
         AXMonthFieldText,
